--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tax Calculator</title>
-    <link rel="stylesheet" href="mpg.css">
+    <link rel="stylesheet" href="tax.css">
 </head>
 <body>
     <main>
@@ -26,7 +26,7 @@
             <input type="button" id="calculate" value="Calculate Total">
         </div>
     </main>
-    <script src="mpg.js"></script>   
+    <script src="tax.css"></script>   
 </body>
 
 </html>
