--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="button" id="calculate" value="Calculate Total">
         </div>
     </main>
-    <script src="tax.css"></script>   
+    <script src="tax.js"></script>   
 </body>
 
 </html>
