--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <h1>Tax Calculators</h1>
         <div>
             <label for="sales">Sales Amount:</label>
-            <input type="text" id="miles">
+            <input type="text" id="sales">
         </div>
         <div>
             <label for="tax">Tax Percent:</label>
-            <input type="text" id="gallons">
+            <input type="text" id="tax">
         </div>
         <div>
             <label for="total">Total:</label>
-            <input type="text" id="mpg">
+            <input type="text" id="total">
         </div>
         <div>
             <label>&nbsp;</label>
